--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -72,7 +72,7 @@
    \textbf{Date} & \textbf{Revision} & \textbf{Comments} & \textbf{Author(s)} \\ \hline
    Dec 1, 2017 & 1.0 & Main content done for all sections & Christopher McDonald \\ \hline
    Dec 13, 2017 & 1.1 & Corrected Document Overview & Nisarg Patel \\ \hline
-   Dec 14, 2017 & 1.2 & Refined Project Scope & Nisarg Patel \\ \hline
+   Dec 14, 2017 & 1.2 & Refined Project Scope \& System Description (Section 2) & Nisarg Patel \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -120,6 +120,11 @@ The system will only attempt to shoot balls from the shooting mechanism straight
 \subsection{System Architecture}
 The system will follow a service-oriented / process-based architecture. This means that a central subsystem will interface with several services that serve a single purpose. Some subsystems will be simply told what needs to be done and others will asked for some return value. This is done to implement separation of concerns where one subsystem doesn't know everything about the system and only what is necessary to satisfy their requirements. It also allows for easy increments of versioning, where one subsystem can be used as long as it is functional and easily swapped out for a newer version with extra features or increased performance. Moreover, this system has heavy timing constraints and an unpredictable environment so some actions must be taken in absence of a service's response. For example, the computer vision may take longer to track a ball depending on its trajectory where the system must shoot another ball in order to keep the user engaged.
 
+%TO DO
+\subsection{System Variables}
+\subsubsection{Monitored Variables}
+\subsubsection{Controlled Variables}
+
 \subsection{Subsystems Overview}
 The system will be broken down into the subsystems with the following purposes: general managing of subsystems, computer vision to detect returns, shot recommendation, model the shot's trajectory, optimize the distance travelled by the shooting mechanism, store the data, take input and output from the user and shooting the ball toward the user. The diagram for this breakdown can be found in Figure \ref{fig:sub}.
 \begin{figure}[H]
@@ -130,7 +135,8 @@ The system will be broken down into the subsystems with the following purposes: 
 \end{figure}
 \subsubsection{Smart Serve}
 The Smart Serve subsystem will provide the means of interfacing with all the subsystems and enforcing timing constraints. For all intents and purposes, it can be considered the main process and hub of the system. In the event a subsystem is taking too long to respond, this subsystem must be able to continue operation to meet timing requirements. The various states and transitions can be found in Figure \ref{fig:fsm}. The FSM diagram shows each state should have an \textit{exit option} if a service takes longer than allowed to preform an action.
-\begin{figure}[htbp]
+
+\begin{figure}[H]
    \centering
    \includegraphics[width=0.7\textwidth]{img/FSM.png}
    \caption{Smart Serve FSM}
@@ -138,13 +144,13 @@ The Smart Serve subsystem will provide the means of interfacing with all the sub
 \end{figure}
 
 \subsubsection{Computer Vision}
-The Computer Visions subsystem will be a service to the Smart Serve subsystem to determine if a shot is successfully returned. When sent a request to begin tracking the ball, it will do so and return a true or false when the ball bounces off the table or it doesn't. In the event the ball never enters frame, it will assume the return was failed after a fixed amount of time.
+The Computer Visions subsystem will be a service to the Smart Serve subsystem to determine if a shot is successfully returned by the user or not. When sent a request to begin tracking the ball, it will do so and return a true or false when the ball bounces off the table or it doesn't. In the event the ball never enters frame, it will assume the return was failed after a fixed amount of time. This subsystem will also aid in further analyzing the return made by the player.
 
 \subsubsection{Shot Recommendation}
-The Shot Recommendation subsystem will be a service to the Smart Serve subsystem to determine which shot should be taken next. The way the subsystem decides on the shot will be determined by the training mode the user selects. These will include shooting the same shot every time, pseudo-randomly picking a shot or using reinforcement learning algorithms to decide the next shot. The last mode will be based on previous performance by the user.
+The Shot Recommendation subsystem will be a service to the Smart Serve subsystem to determine which shot should be taken next. The way the subsystem decides on the shot will be determined by the training mode the user selects from the user interface. These will include shooting the same shot every time, pseudo-randomly picking a shot or using reinforcement learning algorithms to decide the next shot. The last mode will be based on previous performance by the user.
 
 \subsubsection{Shooting Model}
-The Shooting Model subsystem will be a service to the Smart Serve subsystem which provides the means of mapping a desired shot to the details needed to take the shot. The input and output for the system can be found in Figure \ref{fig:shotmodel}. The output will be many combinations of pitch, yaw, speed and angular velocity that satisfy the input shot details. 
+The Shooting Model subsystem will be a service to the Smart Serve subsystem which provides the means of mapping a desired shot to the details needed to take the shot. The input and output for the system can be found in Figure \ref{fig:shotmodel}. Essentially this system will perform all the physics calculations needed to shot the ball at the system desired location. The output will be many combinations of pitch, yaw, speed and angular velocity that satisfy the input shot details. 
 \begin{figure}[htbp]
    \centering
    \includegraphics[width=0.6\textwidth]{img/ShotModel.png} % requires the graphicx package
@@ -152,16 +158,15 @@ The Shooting Model subsystem will be a service to the Smart Serve subsystem whic
    \label{fig:shotmodel}
 \end{figure}
 \subsubsection{Shot Optimizer}
-The Shot Optimizer will be a service to the Smart Serve subsystem which provides means of reducing the travel time the shooting mechanism needs to do in order to shoot the desired shot. This will simply scan each possible orientation and pick one which minimizes the distance travelled for the mechanism.
+The Shot Optimizer will provide means of reducing the travel time the shooting mechanism needs to do in order to shoot the desired shot (optimizer). This will simply scan each possible orientation and pick one which minimizes the distance travelled for the mechanism.
 \subsubsection{Data Storage}
 The Data Storage subsystem will store all the details for each shot, the user's profile and the return rates for each user. It will need to have interfaces for saving data and querying data out of the system in a variety of formats. Ideally, it will require minimal detail and configuration for the subsystem which uses it due a variety of implementations of these subsystems. 
 \subsubsection{User Interface}
 The User Interface subsystem will be the means of translating user requests into actionable requests for the Smart Serve subsystem.
 \subsubsection{Shooting Mechanism}
-The Shooting Mechanism will be the subsystem which actually fires the ball towards the user. A microcontroller will be used as the point of contact and set any actuators required to fire a specified shot. It must complete this action within 1.5 seconds for the Computer Vision to detect the ball returned by the user. 
+The Shooting Mechanism will be the subsystem which actually shoots the ball towards the user side from the system side. A microcontroller possibly Arduino Uno will be used as the point of contact and set any actuators required to shoot a specified shot. All of the hardware will be solely controlled by the microcontroller and will be the primary interface between the Smart Serve system and its electromechanical actuators. It must complete this action within 1.5 seconds for the Computer Vision to detect the ball returned by the user. 
 
-
-\subsection{Use Cases}
+\subsection{Use Cases \& Sequence Diagrams}
 The diagram including all use cases can be found in Figure \ref{fig:usecase}. The user-instantiated ones will be described in detail below.
 \begin{figure}[htbp]
    \centering
@@ -169,60 +174,55 @@ The diagram including all use cases can be found in Figure \ref{fig:usecase}. Th
    \caption{Use Case Diagram}
    \label{fig:usecase}
 \end{figure}
-\subsubsection*{Start Training}
-The user interface will have ways to allow the user to start this action which makes the Smart Serve subsystem prepare for a shot to fire towards the user. To do this, it needs to request a shot to use from the Shot Recommendation subsystem. This will be in the form of a desired location on the table, the speed of the shot and the angular velocity of the ball. The Smart Serve subsystem can then use the Shooting Model to translate this information into pitch, yaw and angular velocity to shoot the ball so it matches the desired shot. The Smart Serve subsystem can then use the Shooting Mechanism's current position and the desired shot to request the optimal position to shoot the ball using the Shot Optimizer. After doing so, it will instruct the shooting mechanism to shoot the ball in the desired way and start the CV subsystem to begin tracking for a successful return. Only until the CV subsystem returns the pass or failed return data, can it update the Data Storage and Shot Recommendation subsystems with this new information. The former will store the result and the data for the shot together, where the latter will update the model used to generate shot recommendations. After doing all this, it can begin preparing for a new shot.
-\subsubsection*{Stop Training}
-In the event the user wants to cease training, the user interface will allow this and will halt the system from shooting balls. No data should be written or shots requested for the shooting mechanism to fire in order to preserve the integrity of the data the system gathers.
-\subsubsection*{View Results}
-When the user wants to visualize the results of their performance, the user interface will allow this action to begin. It will use the Smart Serve subsystem to query data from data storage and present it in some meaningful way.
-\subsubsection*{Tune Parameters}
-The system made need to be adjusted for various lighting, table sizes or environments. The user interface will allow a system administrator to do this in order to directly change values associated for these variables.
-\subsubsection*{Start System}
-The user interface will allow the system to be booted where it starts the Smart Serve subsystem. This will read allow the Shot Recommendation system to build its model based on previous data for the user, if it exists.
-\subsection{Sequence Diagram}
-The sequence diagram for each user-initiated use case are listed below in their respective sections.
-\subsubsection*{Start Training}
-\begin{figure}[htbp]
+\subsubsection{Start Training}
+The user interface will have ways to allow the user to start this action which makes the Smart Serve subsystem prepare for a shot to shoot towards the user. To do this, it needs to request a shot to use from the Shot Recommendation subsystem. This will be in the form of a desired location on the table, the speed of the shot and the angular velocity of the ball. The Smart Serve subsystem can then use the Shooting Model to translate this information into pitch, yaw and angular velocity to shoot the ball so it matches the desired shot. The Smart Serve subsystem can then use the Shooting Mechanism's current position and the desired shot to request the optimal position to shoot the ball using the Shot Optimizer. After doing so, it will instruct the shooting mechanism to shoot the ball in the desired way and start the CV subsystem to begin tracking for a successful return. Only until the CV subsystem returns the pass or failed return data, can it update the Data Storage and Shot Recommendation subsystems with this new information. The former will store the result and the data for the shot together, where the latter will update the model used to generate shot recommendations. After doing all this, it can begin preparing for a new shot.
+\begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Start.png}
    \caption{Sequence Diagram for Starting Training}
    \label{fig:start}
 \end{figure}
-\subsubsection*{Stop Training}
-\begin{figure}[htbp]
+\subsubsection{Stop Training}
+In the event the user wants to cease training, the user interface will allow this and will halt the system from shooting balls. No data should be written or shots requested for the shooting mechanism to shoot in order to preserve the integrity of the data the system gathers.
+\begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Stop.png}
    \caption{Sequence Diagram for Ceasing Training}
    \label{fig:stop}
 \end{figure}
-\subsubsection*{View Results}
-\begin{figure}[htbp]
+\subsubsection{View Results}
+When the user wants to visualize the results of their performance, the user interface will allow this action to begin. It will use the Smart Serve subsystem to query data from data storage and present it in some meaningful way.
+\begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-View.png}
    \caption{Sequence Diagram for Viewing Training Results}
    \label{fig:view}
 \end{figure}
-\subsubsection*{Tune Parameters}
-\begin{figure}[htbp]
+\subsubsection{Tune Parameters}
+The system may need to be adjusted for various lighting, table sizes or environments. The user interface will allow a system administrator to do this in order to directly change values associated for these variables.
+\begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Tune.png}
    \caption{Sequence Diagram for Tuning Parameters}
    \label{fig:tune}
 \end{figure}
-\subsubsection*{Start System}
+\subsubsection{Start System}
+The user interface will allow the system to be booted where it starts the Smart Serve subsystem. This will read allow the Shot Recommendation system to build its model based on previous data for the user, if it exists.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Boot.png}
    \caption{Sequence Diagram for Booting the System}
    \label{fig:boot}
 \end{figure}
+
 \subsection{Behaviour Description}
 As the behaviour of the system has been discussed previously, this section will describe the expected user behaviour and how they would interact with the system.
 \subsubsection{Normal Operation}
-The trainee would begin by starting the system from its off state. This will trigger the Start System use case and allow the Smart Serve system to boot and the Shot Recommendation System to boot and build a model to recommend shots. The user will then trigger the Start Training use case and specify a training mode. This creates the loop of Smart Serve prepping and serving shots for the user. Only until the user starts the Stop System use case will this loop stop during normal operation. Either during training or after, a user can start the View Data use case to get details on their performance.
-\subsubsection{Error Handling}
-If the system should encounter an error, it should display the details of it through the User Interface subsystem. In addition to this, it must take measures to ensure the safety of the user and integrity of the system. This includes stopping all training and pending actions for the system to perform. For example, an error could be a jammed table tennis ball or the system has run out of balls to use.
+The user would begin by starting the system from its off state. This will trigger the Start System use case and allow the Smart Serve system to boot and the Shot Recommendation System to boot and build a model to recommend shots. The user will then trigger the Start Training use case and specify a training mode. This creates the loop of Smart Serve prepping and serving shots for the user. Only until the user starts the Stop System use case will this loop stop during normal operation. Either during training or after, a user can start the View Data use case to get details on their performance.
+\subsubsection{Error Handling} %TODO DO WE NEED TO ADD ANY DESCRIPTION ON HOW WE PLAN TO HANDLE ERRORS?
+If the system encounters an error, it should display the details of it through the User Interface subsystem. In addition to this, it must take measures to ensure the safety of the user and integrity of the system. This includes stopping all training and pending actions for the system to perform. For example, an error could be a jammed table tennis ball or the system has run out of balls to use.
 \section{Class Responsibility Collaboration (CRC) Cards}
+%TODO CHRIS ADD WHAT CRC IS LIKE A BRIEF DESCRIPTION
 \subsection{SmartServe}
 \begin{table}[H]
 \centering
