--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -75,26 +75,27 @@
    Dec 1, 2017 & 1.0 & Main content done for all sections & Christopher McDonald \\ \hline
    Dec 13, 2017 & 1.1 & Corrected Document Overview & Nisarg Patel \\ \hline
    Dec 14, 2017 & 1.2 & Refined Project Scope \& System Description (Section 2) & Nisarg Patel \\ \hline
+   Dec 17, 2017 & 1.3 & Added CRC card intro and reviewed & Christopher McDonald \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
 \newpage
 \section{Introduction}
 \subsection{Project Overview}
-SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches, can enjoy and see a value added by using SmartServe.\\\\
+SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches can enjoy and see some value added by using SmartServe.\\\\
 The project started at the beginning of the Fall 2017 academic term and will conclude at the end of the Winter 2018 term. In addition, the core project team consists of final year Software and Mechatronics Engineering students who are enrolled in the MECHTRON 4TB6/SFWRENG 4G06 capstone project course.
 \subsection{Document Overview}
-The purpose of this document is to provide an overview on the team' proposed system design that meets the system requirements as specified in the Requirements document (SRS). This means the system will be decomposed into subsystems which each have their own responsibilities and design. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\
-For each subsystem, its purpose will be defined with respect to the overall system. After doing so, detailed input and output parameters will be defined. The means of communication will also need to be described as these could be simple method calls to requests over some transport protocol like HTTP or TCP. The general architecture will be decided for each subsystem will be given as each needs to satisfy unique requirements and thus needs to be decided at a system level. \\ \\
-To finish the document, each subsystem will be responsible for implementing some set of requirements which can be found \href{run:../Requirements/Requirements.pdf}{here}. These requirements are outlined in the requirements document found here.
-In the ideal scenario, one subsystem will be the only one that is responsible for any one requirement but may not be the case for all the requirements.
+The purpose of this document is to provide an overview of the system design which meets the system requirements as specified in the \href{run:../Requirements/Requirements.pdf}{Requirements Document}. This means the system will be decomposed into subsystems which each have their own responsibilities and design. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with one another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\ % TODO LINK EVERYTHING
+For each subsystem, its purpose will be defined with respect to the overall system. After doing so, detailed input and output parameters will be defined. How each subsystem is architected is out of scope for this document and will be defined in further documentation. \\ \\
+To finish the document, each subsystem will be responsible for implementing some set of requirements which can be found \href{run:../Requirements/Requirements.pdf}{here}.
+In the ideal scenario, one subsystem will be the only one which is responsible for any one requirement but may not be the case for all the requirements.
 \subsection{Naming Conventions and Terminology}
 \label{sec:definitions}
 The following terms and definitions will be used throughout this document:
 \begin{itemize}
 % Alphabetical order is highly preferred as it eases user navigation
 \item \textbf{ACID}: a database transaction which is atomic, consistent, isolated and durable
-\item \textbf{CV}: computer vision subsystem to perform image processing
+\item \textbf{CV}: computer vision
 \item \textbf{FPS}: frames per second
 \item \textbf{GUI}: graphical user interface
 \item \textbf{HTTP:} hypertext transfer protocol
@@ -121,13 +122,13 @@ The system will only attempt to shoot balls from the shooting mechanism straight
 \subsection{System Architecture}
 The system will follow a service-oriented architecture. This means that a central subsystem will interface with several services that serve a single purpose. Some subsystems will be simply told what needs to be done and others will be asked for some return value. This is done to implement separation of concerns where one subsystem doesn't know everything about the system and only what is necessary to satisfy their requirements. It also allows for easy increments of versioning, where one subsystem can be used as long as it is functional and easily swapped out for a newer version with extra features or increased performance. Moreover, this system has heavy timing constraints and an unpredictable environment so some actions must be taken in absence of a service's response. For example, the computer vision may take longer to track a ball depending on its trajectory where the system must shoot another ball in order to keep the user engaged.
 
-%TO DO
+%TODO
 \subsection{System Variables}
 \subsubsection{Monitored Variables}
 \subsubsection{Controlled Variables}
 
 \subsection{Subsystems}
-The system will be broken down into the subsystems with the following purposes: general managing of subsystems, computer vision to detect returns, shot recommendation, model the shot's trajectory, optimize the distance travelled by the shooting mechanism, store the data, take input and output from the user and shooting the ball toward the user. The diagram for this breakdown can be found in Figure \ref{fig:sub}.
+The system will be broken down into the subsystems with the following purposes: general managing of subsystems, computer vision to detect returns, shot recommendation, modelling the shot's trajectory, optimizing the distance travelled by the shooting mechanism, storing the data, taking input and output from the user and shooting the ball toward the user. The diagram for this breakdown can be found in Figure \ref{fig:sub}.
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.6\textwidth]{img/Subsystem.png} % requires the graphicx package
@@ -136,7 +137,7 @@ The system will be broken down into the subsystems with the following purposes: 
 \end{figure}
 \subsection{Use Cases}
 The diagram including all use cases can be found in Figure \ref{fig:usecase}. The user-instantiated ones will be described in detail below.
-\begin{figure}[htbp]
+\begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/UseCase.png} % requires the graphicx package
    \caption{Use Case Diagram}
@@ -194,7 +195,7 @@ If the system should encounter an error, it should display the details of it thr
 \section{Subsystems Overview}
 \subsection{Smart Serve}
 The Smart Serve subsystem will provide the means of interfacing with all the subsystems and enforcing timing constraints. For all intents and purposes, it can be considered the main process and hub of the system. In the event a subsystem is taking too long to respond, this subsystem must be able to continue operation to meet timing requirements. The various states and transitions can be found in Figure \ref{fig:fsm}. The FSM diagram shows each state should have an \textit{exit option} if a service takes longer than allowed to preform an action.
-\begin{figure}[htbp]
+\begin{figure}[H]
    \centering
    \includegraphics[width=0.7\textwidth]{img/FSM.png}
    \caption{Smart Serve FSM}
@@ -229,7 +230,7 @@ The User Interface subsystem will be the means of translating user requests into
 \subsection{Shooting Mechanism}
 The Shooting Mechanism will be the subsystem which actually fires the ball towards the user. A microcontroller will be used as the point of contact and set any actuators required to fire a specified shot. It must complete this action within 1.5 seconds for the Computer Vision to detect the ball returned by the user.
 \section{Class Responsibility Collaboration (CRC) Cards}
-%TODO CHRIS ADD WHAT CRC IS LIKE A BRIEF DESCRIPTION
+The following sections will include one CRC card for each subsystem. A CRC card contains information pertaining to which requirements a subsystem is responsible for and which subsystems one would collaborate with. This will be used for testing purposes and to track where a given requirement is satisfied. A requirement does not have to be satisfied completely by one subsystem, but a majority of the work must be done by that subsystem.
 \subsection{SmartServe}
 
 \begin{table}[H]
