--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -85,7 +85,7 @@
 SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches can enjoy and see some value added by using SmartServe.\\\\
 The project started at the beginning of the Fall 2017 academic term and will conclude at the end of the Winter 2018 term. In addition, the core project team consists of final year Software and Mechatronics Engineering students who are enrolled in the MECHTRON 4TB6/SFWRENG 4G06 capstone project course.
 \subsection{Document Overview}
-The purpose of this document is to provide an overview of the system design which meets the system requirements as specified in the \href{run:../Requirements/Requirements.pdf}{Requirements Document}. The system will be decomposed into subsystems, where each has responsibilities and is designed to fufill certain requirements. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with one another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\ % TODO LINK EVERYTHING
+The purpose of this document is to provide an overview of the system design which meets the system requirements as specified in the \href{run:../Requirements/Requirements.pdf}{Requirements Document}. The system will be decomposed into subsystems, where each has responsibilities and is designed to fulfill certain requirements. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with one another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\ % TODO LINK EVERYTHING
 For each subsystem, its purpose will be defined with respect to the overall system. After doing so, detailed input and output parameters will be defined. How each subsystem is architected is out of scope for this document and will be defined in further documentation. \\ \\
 
 \subsection{Naming Conventions and Terminology}
@@ -134,7 +134,7 @@ The system will be broken down into subsystems with the following purposes:
 \item \textbf{Computer Vision}:  detection of returns
 \item \textbf{Shooting Mechanism}:  shooting the ball toward the user
 \item \textbf{Shot Recommendation}: provides best shot
-\item \textbf{Data Store}: storing the data
+\item \textbf{Data Storage}: storing the data
 \item \textbf{Shooting Model}: modelling the shot's trajectory
 \item \textbf{Shot Optimizer}: optimizing the distance travelled by the shooting mechanism
 \item \textbf{User Interface}: taking input from the user and showing output
@@ -171,7 +171,7 @@ In the event the user wants to cease training, the user interface will allow thi
    \label{fig:stop}
 \end{figure}
 \subsubsection{View Results}
-When the user wants to visualize the results of their performance, the user interface should be used. It will use the Smart Serve subsystem to query data from data storage and present it in some meaningful way.
+When the user wants to visualize the results of their performance, the user interface should be used. It will use the Smart Serve subsystem to query data from Data Storage and present it in some meaningful way.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-View.png}
