--- a/documentation/HazardAnalysis/HazardAnalysis.tex
+++ b/documentation/HazardAnalysis/HazardAnalysis.tex
@@ -2,6 +2,8 @@
 \usepackage{geometry}
 \geometry{letterpaper}
 
+% TODO: roadmap, top-down / bottom-up, categorize the hardwares
+
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{float}
@@ -15,10 +17,6 @@
     linkcolor=black,
     urlcolor=black
 }
-
-% TODOs:
-% ask Nick about lines in Seq Diagram, ask Nick about need 3D model, ask Nick about entering project goals
-% switch to cleveref
 
 \begin{document}
 
@@ -134,7 +132,7 @@ The fault analysis tree can be found in Figure \ref{fig:ft-Air}.
    \centering
    \includegraphics[width=0.7\textwidth]{img/ft-Air.png} % requires the graphicx package
    \caption{Fault Analysis Tree for \textit{User is struck by an air-borne ball}}
-   \label{fig:ft-Air} %TODO: ITTFF should be ITTF
+   \label{fig:ft-Air}
 \end{figure}
 
 \subsection{User is caught in a Pinch Point}
